# mamrot

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  headers.txt  request_headers.txt  response_headers.txt  wordlist.txt
src/: lib.rs  main.rs  seed.rs
src/rubik/: mod.rs
